--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ compile:
     stage: build
     script:
       - time go get
+      - time GOOS=windows go get
       - time CGO_ENABLED=0 go build -ldflags "-w -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
       - time strip $CI_PROJECT_DIR/6cord
       - time CGO_ENABLED=0 GOOS=windows go build -ldflags "-w -extldflags '-static'" -o $CI_PROJECT_DIR/6cord.exe
