--- a/config.go.example
+++ b/config.go.example
@@ -1,8 +1,6 @@
 package main
 
-import (
-	"github.com/gdamore/tcell"
-)
+import "github.com/gdamore/tcell"
 
 const (
 	// HideBlocked when true, ignores all blocked users
