added scrolling back up to get more messages

--- a/config.go.example
+++ b/config.go.example
@@ -1,6 +1,8 @@
 package main
 
-import "github.com/gdamore/tcell"
+import (
+	"github.com/gdamore/tcell"
+)
 
 const (
 	// HideBlocked when true, ignores all blocked users
@@ -9,6 +11,9 @@ const (
 	// BackgroundColor self explanatory
 	// Acceptable values: tcell.Color*, -1, 0-255 (terminal colors)
 	BackgroundColor = tcell.ColorBlack
+
+	// CommandPrefix is prefix, like $PS1
+	CommandPrefix = "[white]> [:]"
 )
 
 // CustomCommands is for user-made commands
