--- a/config.go.example
+++ b/config.go.example
@@ -1,19 +1,16 @@
 package main
 
-import (
-	"github.com/gdamore/tcell"
-)
-
 const (
 	// HideBlocked when true, ignores all blocked users
 	HideBlocked = true
 
 	// BackgroundColor self explanatory
 	// Acceptable values: tcell.Color*, -1, 0-255 (terminal colors)
-	BackgroundColor = tcell.ColorBlack
+	// Check https://jonasjacek.github.io/colors/ for reference
+	BackgroundColor = -1
 
 	// CommandPrefix is prefix, like $PS1
-	CommandPrefix = "[white]> [:]"
+	CommandPrefix = "[white]> "
 )
 
 // CustomCommands is for user-made commands
