better md, tweaks, config tweaks

--- a/config.go.example
+++ b/config.go.example
@@ -1,6 +1,9 @@
 package main
 
 const (
+	// ChatPadding determines the width the message is from the border
+	ChatPadding = 2
+
 	// HideBlocked when true, ignores all blocked users
 	HideBlocked = true
 
@@ -11,6 +14,13 @@ const (
 
 	// CommandPrefix is prefix, like $PS1
 	CommandPrefix = "[white]> "
+
+	// SyntaxHighlightColorscheme is the color scheme for syntax highlighting
+	// https://xyproto.github.io/splash/docs/all.html
+	SyntaxHighlightColorscheme = "vs"
+
+	// ShowEmojiURLs converts emojis into clickable URLs if true
+	ShowEmojiURLs = true
 )
 
 // CustomCommands is for user-made commands
