added Windows back into CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,12 @@ compile:
     stage: build
     script:
       - time go get
+      # compiles 6cord without cgo so that it's statically linked 
+      # may affect performance
       - time CGO_ENABLED=0 go build -ldflags "-w -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
-      - touch "No Windows for you :D"
+      - time GOOS=windows go get
+      - time GOOS=windows CGO_ENABLED=0 go build -o $CI_PROJECT_DIR/6cord.exe
     artifacts:
       paths:
         - 6cord
-        - No Windows for you :D
+        - 6cord.exe
