--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
-image: golang:latest
+image: alpine:latest
 
 variables:
   REPO_NAME: gitlab.com/diamondburned/6cord
 
 before_script:
-  - apt install upx-ucl
+  - apk install upx go
   - mkdir -p $GOPATH/src/$(dirname $REPO_NAME)
   - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
   - cd $GOPATH/src/$REPO_NAME
