--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,13 @@ compile:
       - time go get
       # compiles 6cord without cgo so that it's statically linked 
       # may affect performance
-      - time CGO_ENABLED=0 go build -ldflags "-w -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
+      - export CG_ENABLED=0
+      - time go build -ldflags "-w -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
       - strip $CI_PROJECT_DIR/6cord
       - upx $CI_PROJECT_DIR/6cord
-      - time GOOS=windows go get
-      - time GOOS=windows CGO_ENABLED=0 go build -o $CI_PROJECT_DIR/6cord.exe
+      - export GOOS=windows
+      - time go get
+      - time go build -o $CI_PROJECT_DIR/6cord.exe
     artifacts:
       paths:
         - 6cord
