--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,21 +9,24 @@ before_script:
   - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
   - cd $GOPATH/src/$REPO_NAME
 
+cache:
+  paths:
+    - $GOPATH/src
+
 stages:
     - build
 
 compile:
     stage: build
     script:
-      - time go get
+      - time go get -u
       # compiles 6cord without cgo so that it's statically linked 
       # may affect performance
       - export CG_ENABLED=0
-      - time go build -ldflags "-w -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
-      - strip $CI_PROJECT_DIR/6cord
+      - time go build -ldflags "-s -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
       - upx $CI_PROJECT_DIR/6cord
       - export GOOS=windows
-      - time go get
+      - time go get -u
       - time go build -o $CI_PROJECT_DIR/6cord.exe
     artifacts:
       paths:
