--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ compile:
       - time go get 
       # compiles 6cord without cgo so that it's statically linked 
       # may affect performance
-      - export CG_ENABLED=0
+      - export CGO_ENABLED=0
       - time go build -ldflags "-s -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
       # - upx $CI_PROJECT_DIR/6cord
       - export GOOS=windows
