--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ compile:
       # may affect performance
       - export CGO_ENABLED=0
       - time go build -ldflags "-s -extldflags '-static'" -o $CI_PROJECT_DIR/6cord
-      # - upx $CI_PROJECT_DIR/6cord
+      - upx -q --8086 -9 $CI_PROJECT_DIR/6cord
       - export GOOS=windows
       - time go get 
       - time go build -o $CI_PROJECT_DIR/6cord.exe
