--- a/6cord.toml
+++ b/6cord.toml
@@ -1,4 +1,4 @@
-# Username and password authentication flow
+# Email and password authentication flow
 # NOT recommended, neither me nor Discord
 username = ""
 password = ""
