--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ compile:
       # compiles 6cord without cgo so that it's statically linked 
       # may affect performance
       - export CGO_ENABLED=0
-      - time go build -buildmode=pie -ldflags -w -ldflags -s -ldflags -extldflags="-static,-Wl,-z,now,-z,relro" -o $CI_PROJECT_DIR/6cord
+      - time go build -buildmode=pie -ldflags -w -ldflags -s -o $CI_PROJECT_DIR/6cord
       - upx -q --8086 -9 $CI_PROJECT_DIR/6cord
       - export GOOS=windows
       - time go get 
