templating for prefix

--- a/6cord.toml
+++ b/6cord.toml
@@ -20,7 +20,7 @@ token = ""
 	trigger-typing = true
 	foreground-color = 15
 	background-color = -1
-	command-prefix = "[-]> "
+	command-prefix = "[${GUILD}${CHANNEL}] "
 	default-status = "Send a message or input a command"
 	syntax-highlight-colorscheme = "emacs"
 	show-emoji-urls = true
