--- a/6cord.toml
+++ b/6cord.toml
@@ -16,6 +16,7 @@ token = ""
 	# Keys are optional.
 	show-channels = true
 	chat-padding = 2
+	sidebar-ratio = 3
 	hide-blocked = true
 	trigger-typing = true
 	foreground-color = 15
@@ -26,4 +27,6 @@ token = ""
 	show-emoji-urls = true
 	obfuscate-words = false
 	image-fetch-timeout = 1
+	image-width = 400
+	image-height = 400
 
