Add 'sidebar-indent' configuration option

--- a/6cord.toml
+++ b/6cord.toml
@@ -17,6 +17,7 @@ token = ""
 	show-channels = true
 	chat-padding = 2
 	sidebar-ratio = 3
+	sidebar-indent = 2
 	hide-blocked = true
 	trigger-typing = true
 	foreground-color = 15
