--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: golang:alpine
 
 variables:
   REPO_NAME: gitlab.com/diamondburned/6cord
+  GO111MODULE: on
 
 before_script:
   - apk add git upx
@@ -17,8 +18,8 @@ compile:
     script:
       - time go get 
       # compiles 6cord without cgo so that it's statically linked 
-      # may affect performance
-      - export CGO_ENABLED=0
+      # may affect performance - disabled for ueberzug + xorg
+      # - export CGO_ENABLED=0
       - time go build -ldflags -w -ldflags -s -o $CI_PROJECT_DIR/6cord
       - upx -q --8086 -9 $CI_PROJECT_DIR/6cord
       - export GOOS=windows
