--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ compile:
       - time go get 
       # compiles 6cord without cgo so that it's statically linked 
       # may affect performance - disabled for ueberzug + xorg
-      # - export CGO_ENABLED=0
+      - export CGO_ENABLED=0
       - time go build -ldflags -w -ldflags -s -o $CI_PROJECT_DIR/6cord
       - upx -q --8086 -9 $CI_PROJECT_DIR/6cord
       - export GOOS=windows
