--- a/6cord.toml
+++ b/6cord.toml
@@ -27,8 +27,8 @@ token = ""
 	trigger-typing = true
 	foreground-color = 15
 	background-color = -1
-	author-format = "[#{color}::]{name}"
-  command-prefix = "[${GUILD}${CHANNEL}] "
+	author-format = "[#{color}::b]{name}"
+	command-prefix = "[${GUILD}${CHANNEL}] "
 	default-status = "Send a message or input a command"
 	syntax-highlight-colorscheme = "emacs"
 	show-emoji-urls = true
