--- a/6cord.toml
+++ b/6cord.toml
@@ -21,7 +21,7 @@ token = ""
 	compact-mode = false
 	show-channels = true
 	chat-padding = 2
-	sidebar-ratio = 3
+	sidebar-width = 35
 	sidebar-indent = 2
 	hide-blocked = true
 	trigger-typing = true
